# intensional-datatys

./: .ghc.environment.x86_64-linux-8.6.5  .gitignore  ChangeLog.md  Profile.hs  README.md  README.ms  TODO.md  args  cabal.project  cmd  dump  dump#  hie.yaml  intensional-constraints.cabal  intensional-datatys.cabal  log  package.yaml
.stack-work/: stack.sqlite3
app/: Main.hs
benchmark/: Benchmark.hs
dep_src/: ConGraph.hs  Expr.hs  Lib.hs  Resolve.hs  Types.hs  _InferM.hs  _Types.hs
dep_src'/: ConGraph.hs  InferCoreExpr.hs  InferM.hs  Type.hs  Types.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
interface/: Paths_intensional_constraints  TestLib
profile/: Profile.hs  args  ghc-options
src/: ConGraph.hs  ConGraphM.hs  Constraint.hs  Constraints.hs  Constructors.hs  Context.hs  DataTypes.hs  Emit.hs  Errors.hs  Expr.hs  FromCore.hs  GenericConGraph.hs  Guard.hs  Guards.hs  InferCoreExpr.hs  InferM.hs  Inference.hs  Intensional.hs  Interface.hs  Lib.hs  PrettyPrint.hs  Resolve.hs  Scheme.hs  Serialization.hs  Types.hs  Ubiq.hs  Utils.hs
src/InferM/: Emit.hs  FromCore.hs  Internal.hs
src/Intensional/: Constraints.hs  Constructors.hs  FromCore.hs  Guard.hs  InferCoreExpr.hs  InferM.hs  Scheme.hs  Types.hs  Ubiq.hs
test/: DNF.hs  Formula.hs  IntMap.hs  IntSet.hs  Map.hs  PaperExamples.hs  Sequence.hs  Set.hs  SetsForVariants.hs  SimpleTest.hs  Test.hs  TestLib.hs  TestMain.hs  Tree.hs
test/Self/: Constraints.hs  Constructors.hs  FromCore.hs  InferCoreExpr.hs  InferM.hs  Lib.hs  Scheme.hs  Types.hs  Ubiq.hs
