cabal-version: 3.0

name:           intensional-constraints
version:        0.1.0.0
synopsis:       A refinement type plugin
description:    Please see the README on GitHub at <https://github.com/eddiejones2108/intensional-constraints#readme>
homepage:       https://github.com/eddiejones2108/intensional-constraints#readme
bug-reports:    https://github.com/eddiejones2108/intensional-constraints/issues
category:       Language
author:         Eddie Jones
maintainer:     ej16147@bristol.ac.uk
copyright:      2019 Eddie Jones
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/eddiejones2108/intensional-constraints

library
  exposed-modules:
      Lib
  other-modules:
      Types
      Scheme
      Constraints
      ConGraph
      InferM.Internal
      FromCore
      Emit
      InferM
      InferCoreExpr
  hs-source-dirs:
      src
  ghc-options: -O2 -Wall
  build-depends:
      base >=4 && <5
    , ghc >=8.6 && <8.10
    , containers
    , array
    , mtl
    , hashable
    , time
    , directory
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Set.hs
  hs-source-dirs:
      test
  ghc-options: -g -O0 -fplugin Lib -fplugin-opt Lib:time
  build-depends:
      base >=4 && <5
    , intensional-constraints
  default-language: Haskell2010

-- Requires ghc 8.8
-- executable profile
--   build-depends:
--       base >=4 && <5
--     , ghc >= 8.8
--     , intensional-constraints
--   ghc-options:
--   main-is: Profile.hs
--   default-language: Haskell2010
