cabal-version:  3.0

name:           intensional-constraints
version:        0.2.0.0
synopsis:       A refinement type plugin
description:    Please see the README on GitHub at <https://github.com/eddiejones2108/intensional-constraints#readme>
homepage:       https://github.com/eddiejones2108/intensional-constraints#readme
bug-reports:    https://github.com/eddiejones2108/intensional-constraints/issues
category:       Language
author:         Eddie Jones, Steven Ramsay
maintainer:     ej16147@bristol.ac.uk, steven.ramsay@bristol.ac.uk
copyright:      2019 Eddie Jones, Steven Ramsay
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/eddiejones2108/intensional-constraints

library
  exposed-modules:
      Intensional
  other-modules:
      Intensional.Types
      Intensional.Constructors
      Intensional.Constraints
      Intensional.Guard
      Intensional.Scheme
      Intensional.InferM
      Intensional.FromCore
      Intensional.InferCoreExpr
      Intensional.Ubiq
  hs-source-dirs:
      src
  cpp-options:
     
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Wnoncanonical-monad-instances
  build-depends:
        base >=4 && <5
      , ghc >=8.6 && <8.10
      , extra
      , containers
      , unordered-containers
      , mtl
      , hashable
      , aeson
      , directory
      , filepath
      , haskeline
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: PaperExamples.hs
  hs-source-dirs:
      test
  ghc-options: 
      -g 
      -O0 
      -fno-pre-inlining 
      -funfolding-use-threshold=0 
      -fno-ignore-interface-pragmas 
      -fno-omit-interface-pragmas
      -fplugin Intensional
  build-depends:
      base >=4 && <5
    , ghc >=8.6 && <8.10
    , extra
    , containers
    , unordered-containers
    , mtl
    , hashable
    , directory
    , intensional-constraints
  default-language: Haskell2010

executable benchmark
  build-depends:
      base >=4
    , aeson
    , containers
    , intensional-constraints
    , filepath
    , directory
  hs-source-dirs:
      benchmark
  main-is: Benchmark.hs
  default-language: Haskell2010

-- Requires ghc 8.8
executable profile
  ghc-options:
  build-depends:
      base >=4 && <5
    , ghc  >= 8.8
    , filepath
    , directory
    , intensional-constraints
  hs-source-dirs:
      profile
  main-is: Profile.hs
  default-language: Haskell2010
